    docker
  * [DEV] Correction doc + correction proxy on pour APT + ajout messahe
    d'erreur sur commande incorrecte
  * [DEV] Màj des procédures docker-proxy-on et docker-proxy-off
  * [DEV] Màj des scripts on et off pour docker
  * [DEV] Ajout des fichiers pour proxypac
  * [DEV] Ajout des fichiers pour proxypac
  * [DEV] Commit -- 17/08/2016 @ 13:18:23
  * [DEV] wip refactoring
  * [DEV] update .gitignore
  * [DEV] Refactoring des fonctions proxy on / proxy off
  * [DEV] Commit -- 26/09/2016 @ 13:08:01
  * [DEV] Màj doc
  * [DEV] Modifications mineures
  * [DEV] Correction bug fonctions backup/restore de conf
  * [DEV] Update .gitignore
  * [DEV] Correction bug suppression fichier (docker off)
  * [DEV] Correction d'un bug de chargement de la lib inist-proxy
  * [DEV] Refonte de la façade des commandes
  * [DEV] Update autocomplétion + help
  * [DEV] Refactoring des fonctions proxy on/off pour les services +
    ajout des actions 'help' et 'status' pour chaque service
  * [DEV] Ajout des services wget et curl
  * [DEV] Màj du postinst pour installer les dépendances du paquet deb
  * [DEV] Commit -- 05/10/2016 @ 13:53:43
  * [DEV] Adaptation des commandes sudo aux particularités de Debian
  * [DEV] Factorisation de la commande sudo générique
  * [DEV] Commit -- 05/10/2016 @ 15:25:38
  * [DEV] Ajustement des droits pour /var/run/inist-tools/
  * [DEV] Correction d'un affichage
  * [DEV] Correction de plusieurs scripts qui cherchent à obtenir des
    infos provenant de git alors que le répertoire n'est pas sous
    contrôle de version
  * [DEV] Suppression des actions postrm
  * [DEV] Correction de bug d'affichages + suppression de commandes
    postinst problématiques
  * [DEV] Version 1.0
  * [DEV] Correction bug d'un test
  * [DEV] Mis en veille des commandes non utilisées
  * [DEV] Commit -- 10/10/2016 @ 10:07:13

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200