@@ -81,6 +81,11 @@ else
 fi
 
 #-------------------------------------------------------------------------------
+# Check sur le répertoire /env de l'appli
+#-------------------------------------------------------------------------------
+$SUDO /opt/inist-tools/tools/env-create.sh
+
+#-------------------------------------------------------------------------------
 # COMMANDE [+option[s]]
 #-------------------------------------------------------------------------------
 
