@@ -1,0 +1,30 @@
+#!/usr/bin/env bash
+################################################################################
+#
+# inist-tools / tools / env-create.sh
+#
+# Créé le répertoire de stockage des variables d'environnement persistantes
+#
+# @author : INIST-CNRS/DPI
+#
+################################################################################
+
+# ------------------------------------------------------------------------------
+# Variables globales
+# ------------------------------------------------------------------------------
+USER=$(logname)
+ENV_DIR="/opt/inist-tools/env"
+
+# ------------------------------------------------------------------------------
+# Répertoire d'environnement
+# ------------------------------------------------------------------------------
+if [ ! -d "$ENV_DIR" ]; then
+   mkdir -p "$ENV_DIR"
+fi
+chown -R "$USER":"$USER" "$ENV_DIR"
+chmod -R 777 "$ENV_DIR"
+
+# ------------------------------------------------------------------------------
+# Fin
+# ------------------------------------------------------------------------------
+exit 0
